test/message/vm_display_syntax_error.chakracore.out
beginning
SyntaxError: Expected identifier
   at Script (vm.js:*)
   at createScript (vm.js:*)
   at runInThisContext (vm.js:*)
   at Anonymous function (*test*message*vm_display_syntax_error.js:*)
   at Module.prototype._compile (internal/modules/cjs/loader.js:*)
   at Module._extensions[.js] (internal/modules/cjs/loader.js:*)
   at Module.prototype.load (internal/modules/cjs/loader.js:*)
   at tryModuleLoad (internal/modules/cjs/loader.js:*)
   at Module._load (internal/modules/cjs/loader.js:*)
   at Module.runMain (internal/modules/cjs/loader.js:*)
test.vm:*
var 5;
    ^^

SyntaxError: Expected identifier
   at Script (vm.js:*)
   at createScript (vm.js:*)
   at runInThisContext (vm.js:*)
   at Anonymous function (*test*message*vm_display_syntax_error.js:*)
   at Module.prototype._compile (internal/modules/cjs/loader.js:*)
   at Module._extensions[.js] (internal/modules/cjs/loader.js:*)
   at Module.prototype.load (internal/modules/cjs/loader.js:*)
   at tryModuleLoad (internal/modules/cjs/loader.js:*)
   at Module._load (internal/modules/cjs/loader.js:*)
   at Module.runMain (internal/modules/cjs/loader.js:*)
